hphp/hack/test/typecheck/variadics/ellipsis_lambda.php
<?hh

function test(): void {
  $f = (...) ==> {};
}
